* Ausgabe der Bundle Version.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@167 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -54,6 +54,7 @@
 	        </filterchain>
 	    </loadproperties>
 		<property name="plugin" value="de.itemis.jee6.ui_${Bundle-Version}.jar"/>
+		<echo message="Version: ${Bundle-Version}"/>
 	</target>
 
 	<target name="clean" depends="-version">
