--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -59,6 +59,7 @@
 	        </filterchain>
 	    </loadproperties>
 		<property name="plugin" value="de.itemis.jee6_${Bundle-Version}.jar"/>
+		<echo message="Version: ${Bundle-Version}"/>
 	</target>
 
 	<target name="clean" depends="-version">
