--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -68,13 +68,14 @@
 	</target>
 
 	<target name="generate">
-		<echo message="${eclipse.home}"/>
+		<echo message="Eclipse: ${eclipse.home}"/>
 		<java classname="org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher" classpathref="generate.classpath" fork="true">
 			<arg value="${src-path}/de/itemis/jee6/GenerateDsl.mwe2"/>
 		</java>
 	</target>
 	
 	<target name="compile">
+		<echo message="Eclipse: ${eclipse.home}"/>
 		<mkdir dir="${bin-path}"/>
 		<copy todir="${bin-path}">
 			<fileset dir="${src-path}">
@@ -82,6 +83,9 @@
 			</fileset>
 			<fileset dir="${src-gen-path}">
 				<exclude name="**/*.java"/>
+			</fileset>
+			<fileset dir=".">
+				<include name="plugin.xml"/>
 			</fileset>
 		</copy>
 		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
@@ -91,9 +95,6 @@
 	
 	<target name="package" depends="compile,-version">
 		<jar destfile="${plugin}" manifest="${manifest}">
-			<zipfileset dir=".">
-				<include name="plugin.xml"/>
-			</zipfileset>
 			<zipfileset dir="${bin-path}"/>
 		</jar>
 	</target>
