* Einige weitere Beispiele:    o PDF-Export hinzugefügt.    o Image Servlet in Hauptmenü eingehängt.    o Proxy Imaging eingefügt und in Hauptmenü eingehänt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@182 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/.classpath
+++ b/JEE6/FacesTest/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6.util"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itextpdf-5.3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
