* Build Dateien aufgeräumt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@183 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -117,7 +117,7 @@
 	</target>
 
 	<target name="generate">
-		<echo message="${eclipse.home}"/>
+		<echo message="Eclipse: ${eclipse.home}"/>
 		<java classname="org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher" classpathref="generate.classpath" fork="true">
 			<arg value="${src-path}/FacesTest.mwe2"/>
 		</java>
