* Glassfish Domain ist jetzt konfigurierbar.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@194 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -31,7 +31,8 @@
 	<property name="jboss.deploy"         value="${jboss.home}/standalone/deployments"/>
 
 	<property name="glassfish.home"       value="/opt/glassfish3"/>
-	<property name="glassfish.deploy"     value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
+	<property name="glassfish.domain"     value="domain1"/>
+	<property name="glassfish.deploy"     value="${glassfish.home}/glassfish/domains/${glassfish.domain}/autodeploy/"/>
 
 	<!-- ==================================================== -->
 	<!--              Setting up classpaths                   -->
