* LDAP-Connector in JEE6-Library als abstrakte Klasse aufgenommen.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@195 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -1,4 +1,4 @@
-<project name="Faces Generator Test" default="generate">
+<project name="JEE6-WebApp Example (Full generated app)" default="generate">
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
 
