--- a/JEE6/MinimalWebApplication/build.xml
+++ b/JEE6/MinimalWebApplication/build.xml
@@ -1,4 +1,4 @@
-<project name="Minimal JEE6-App" default="package">
+<project name="JEE6-WebApp Minimal" default="package">
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
 
