--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -88,12 +88,12 @@
 		<jar destfile="${jar}">
 			<zipfileset dir="${bin-path}">
 				<include name="**/*.class"/>
-				<exclude name="**/*Test*.class"/>
+				<exclude name="**/test/*.class"/>
 				<exclude name="log4j.properties"/>
 			</zipfileset>
 			<zipfileset dir="${src-path}">
 				<include name="**/*.java"/>
-				<exclude name="**/*Test*.java"/>
+				<exclude name="**/test/*.java"/>
 			</zipfileset>
 		</jar>
 	</target>
@@ -142,6 +142,8 @@
 			<test name="de.itemis.jee6.test.FilterTest"/>
 			<test name="de.itemis.jee6.test.DownloadTest"/>
 			<test name="de.itemis.jee6.test.ValidatorTest"/>
+			<test name="de.itemis.jee6.test.LdapConnectionTest"/>
+			<test name="de.itemis.jee6.test.LdapTest"/>
 		</junit>
 	</target>
 
