* Regenerate DSL funktioniert jetzt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@202 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -67,6 +67,10 @@
 		<delete dir="${bin-path}" />
 	</target>
 
+	<target name="undeploy" depends="-version">
+		<delete file="${eclipse.home.plugins}/${plugin}" />
+	</target>
+
 	<target name="generate">
 		<echo message="Eclipse: ${eclipse.home}"/>
 		<java classname="org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher" classpathref="generate.classpath" fork="true">
