--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -71,7 +71,7 @@
 		<delete file="${eclipse.home.plugins}/${plugin}" />
 	</target>
 
-	<target name="generate">
+	<target name="generate" depends="undeploy">
 		<echo message="Eclipse: ${eclipse.home}"/>
 		<java classname="org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher" classpathref="generate.classpath" fork="true">
 			<arg value="${src-path}/de/itemis/jee6/GenerateDsl.mwe2"/>
