--- a/JEE6/FacesTest/src/de/itemis/faces/errors.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/errors.properties
@@ -1,2 +1,5 @@
-
+#Automatically extended
+#Fri Oct 12 15:33:32 CEST 2012
+error.code404.message=The requested document was not found\!
+error.code404.title=Four oh four\!
 not-found.title=Resource not found\!
