* Error Handling korrigiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@212 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/errors.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/errors.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Fri Oct 12 15:33:32 CEST 2012
-error.code404.message=The requested document was not found\!
-error.code404.title=Four oh four\!
+#Fri Oct 12 23:34:55 CEST 2012
+code404.message=The requested document was not found\!
+code404.title=Four oh four\!
 not-found.title=Resource not found\!
