--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -105,7 +105,7 @@
 
 	<target name="generate">
 		<echo message="Eclipse: ${eclipse.home}"/>
-		<java classname="org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher" classpathref="generate.classpath" fork="true">
+		<java classname="org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher" classpathref="generate.classpath" fork="true" failonerror="true">
 			<arg value="${src-path}/example.mwe2"/>
 		</java>
 	</target>
