* Rekursive Entities.  * Jede Menge Bug Fixing.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@227 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -119,7 +119,7 @@
 				<include name="*.*"/>
 			</fileset>
 		</copy>
-		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
+		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false" failonerror="true">
 			<classpath refid="compile.path"/>
 		</javac>
 	</target>
