--- a/JEE6/FacesTest/src/de/itemis/faces/errors.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/errors.properties
@@ -1,5 +1,7 @@
 #Automatically extended
-#Fri Oct 12 23:34:55 CEST 2012
+#Mon Oct 22 21:12:45 CEST 2012
+admin.userinfo.not-empty=Data of UserInfo is not empty\!
 code404.message=The requested document was not found\!
 code404.title=Four oh four\!
+info.startup.not-empty=Data of Startup is not empty\!
 not-found.title=Resource not found\!
