* Error Page eingeführt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@237 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/errors.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/errors.properties
@@ -1,7 +1,8 @@
 #Automatically extended
-#Mon Oct 22 21:12:45 CEST 2012
+#Tue Oct 30 15:30:11 CET 2012
 admin.userinfo.not-empty=Data of UserInfo is not empty\!
 code404.message=The requested document was not found\!
 code404.title=Four oh four\!
+error.title=General application fault\!
 info.startup.not-empty=Data of Startup is not empty\!
 not-found.title=Resource not found\!
