* Base64-Kodierung mit in die JEE6-Utils aufgenommen.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@244 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -137,6 +137,7 @@
 			<formatter type="xml"/>
 			<jvmarg value="-Demma.coverage.out.file=coverage.emma" />
 			<jvmarg value="-Demma.coverage.out.merge=true" />
+			<test name="de.itemis.jee6.test.Base64Test"/>
 			<test name="de.itemis.jee6.test.UtilTest"/>
 			<test name="de.itemis.jee6.test.ErrorInfoTest"/>
 			<test name="de.itemis.jee6.test.FilterTest"/>
