* JEE6 wird immer als Java 6 kompiliert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@253 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -82,7 +82,9 @@
 				<exclude name="**/*.java"/>
 			</fileset>
 		</copy>
-		<javac srcdir="${src-path}:${tst-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
+		<javac srcdir="${src-path}:${tst-path}" destdir="${bin-path}" debug="true"
+				includeantruntime="false"
+				source="6">
 			<classpath refid="compile.path"/>
 		</javac>
 	</target>
