* Plugins werden Java 6 kompatibel gebaut.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@255 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -78,7 +78,9 @@
 				<include name="resources/*.*"/>
 			</fileset>
 		</copy>
-		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
+		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true"
+				includeantruntime="false"
+				source="6">
 			<classpath refid="generate.classpath"/>
 		</javac>
 	</target>
