--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -91,7 +91,9 @@
 				<include name="plugin.xml"/>
 			</fileset>
 		</copy>
-		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
+		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true"
+				includeantruntime="false"
+				source="6">
 			<classpath refid="generate.classpath"/>
 		</javac>
 	</target>
