* Behandlung von 403er Fehler wird generiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@273 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesTest/src/de/itemis/faces/errors.properties
+++ b/JEE6/FacesTest/src/de/itemis/faces/errors.properties
@@ -1,8 +1,10 @@
 #Automatically extended
-#Tue Oct 30 15:30:11 CET 2012
-admin.userinfo.not-empty=Data of UserInfo is not empty\!
-code404.message=The requested document was not found\!
-code404.title=Four oh four\!
-error.title=General application fault\!
-info.startup.not-empty=Data of Startup is not empty\!
-not-found.title=Resource not found\!
+#Thu May 02 10:08:13 CEST 2013
+admin.userinfo.not-empty=Die Benutzerdaten sind nicht leer\!
+code403.message=Der Zugriff wurde verweigert\!
+code403.title=Vier-Null-Drei\!
+code404.message=Das angeforderte Dokument konnte nicht gefunden werden\!
+code404.title=Vier-Null-Vier\!
+error.title=Allgemeiner Programmfehler\!
+info.startup.not-empty=Startup-Daten sind nicht leer\!
+not-found.title=Resource nicht gefunden\!
