--- a/JEE6/MinimalWebApplication/.project
+++ b/JEE6/MinimalWebApplication/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MinimalWebApplication</name>
+	<name>MinimalWebApplicationCdi</name>
 	<comment></comment>
 	<projects>
 	</projects>
