--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -82,7 +82,7 @@
 		</copy>
 		<javac srcdir="${src-path}:${tst-path}" destdir="${bin-path}" debug="true"
 				includeantruntime="false"
-				source="6">
+				source="6" encoding="UTF-8">
 			<classpath refid="compile.path"/>
 		</javac>
 	</target>
@@ -136,6 +136,7 @@
 				<formatter type="xml"/>
 				<test name="de.itemis.jee6.test.Base64Test"/>
 				<test name="de.itemis.jee6.test.UtilTest"/>
+				<test name="de.itemis.jee6.test.CollatorTest"/>
 				<test name="de.itemis.jee6.test.ErrorInfoTest"/>
 				<test name="de.itemis.jee6.test.FilterTest"/>
 				<test name="de.itemis.jee6.test.DownloadTest"/>
