* Packaging korrigiert.  * Refactoring der Tests.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@292 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -91,12 +91,12 @@
 		<jar destfile="${jar}">
 			<zipfileset dir="${bin-path}">
 				<include name="**/*.class"/>
-				<exclude name="**/test/*.class"/>
+				<exclude name="**/test/**/*.class"/>
 				<exclude name="log4j.properties"/>
 			</zipfileset>
 			<zipfileset dir="${src-path}">
 				<include name="**/*.java"/>
-				<exclude name="**/test/*.java"/>
+				<exclude name="**/test/**/*.java"/>
 			</zipfileset>
 		</jar>
 	</target>
