--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -83,6 +83,14 @@
 	<!--              Setting up build targets                -->
 	<!-- ==================================================== -->
 
+	<target name="-version">
+		<first id="version-file">
+		    <fileset dir="${basedir}/${src-path}" includes="**/version.properties" />
+		</first>
+		<property file="${toString:version-file}" />
+		<echo message="Version: ${version.major}.${version.minor}.${version.patch}"/>
+	</target>
+
 	<target name="clean">
 		<delete file="${findbugs.results}"/>
 		<delete file="${war}" />
@@ -110,7 +118,7 @@
 		</java>
 	</target>
 
-	<target name="compile">
+	<target name="compile" depends="-version">
 		<mkdir dir="${bin-path}"/>
 		<mkdir dir="${lib-path}"/>
 		<copy file="../de.itemis.jee6.util/jee6-utils.jar" todir="${lib-path}"/>
