--- a/JEE6/FacesTest/build.xml
+++ b/JEE6/FacesTest/build.xml
@@ -105,6 +105,14 @@
 	<!--              Setting up build targets                -->
 	<!-- ==================================================== -->
 
+	<target name="-version">
+		<first id="version-file">
+		    <fileset dir="${basedir}/${src-path}" includes="**/version.properties" />
+		</first>
+		<property file="${toString:version-file}" />
+		<echo message="Version: ${version.major}.${version.minor}.${version.patch}"/>
+	</target>
+
 	<target name="clean">
 		<delete file="${findbugs.results}"/>
 		<delete file="${war}" />
@@ -126,7 +134,7 @@
 		</java>
 	</target>
 
-	<target name="compile">
+	<target name="compile" depends="-version">
 		<mkdir dir="${bin-path}"/>
 		<copy file="../de.itemis.jee6.util/jee6-utils.jar" todir="${lib-path}"/>
 		<javac srcdir="${src-path}:${src-gen-path}:${tst-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
