* SHA1-Hashing ergänzt.  * Sort Order wird abgetestet.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@294 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -135,6 +135,7 @@
 				<classpath refid="coverage.classpath" />
 				<formatter type="xml"/>
 				<test name="de.itemis.jee6.test.Base64Test"/>
+				<test name="de.itemis.jee6.test.SHA1Test"/>
 				<test name="de.itemis.jee6.test.UtilTest"/>
 				<test name="de.itemis.jee6.test.CollatorTest"/>
 				<test name="de.itemis.jee6.test.ErrorInfoTest"/>
