--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -7,6 +7,7 @@
 	<property name="src-path"     value="./src"/>
 	<property name="src-gen-path" value="./src-gen"/>
 	<property name="manifest"     value="META-INF/MANIFEST.MF"/>
+	<property name="plugin-name"  value="de.itemis.jee6_" />
 
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
@@ -58,7 +59,7 @@
 	            </tokenfilter>
 	        </filterchain>
 	    </loadproperties>
-		<property name="plugin" value="de.itemis.jee6_${Bundle-Version}.jar"/>
+		<property name="plugin" value="${plugin-name}${Bundle-Version}.jar"/>
 		<echo message="Version: ${Bundle-Version}"/>
 	</target>
 
@@ -68,7 +69,11 @@
 	</target>
 
 	<target name="undeploy" depends="-version">
-		<delete file="${eclipse.home.plugins}/${plugin}" />
+		<delete>
+			<fileset dir="${eclipse.home.plugins}">
+				<include name="${plugin-name}*.jar"/>
+			</fileset>
+		</delete>
 	</target>
 
 	<target name="generate" depends="clean,undeploy">
