* DB-Auth kann unterschiedliche Update Sites behandeln.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@304 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/errors.properties
+++ b/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/errors.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Tue Jun 18 09:50:52 CEST 2013
+#Wed Jun 26 15:41:59 CEST 2013
 code403.message=Access to the requested resource has been denied\!
 code403.title=Four oh three\!
 code404.message=The requested document was not found\!
@@ -7,3 +7,4 @@ code404.title=Four oh four\!
 error.title=General application fault\!
 not-found.title=Resource not found\!
 user.authinfo.not-empty=Data of AuthInfo is not empty\!
+user.siteinfo.not-empty=Data of SiteInfo is not empty\!
