* Check leicht optimiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@308 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/MinimalWebApplicationCdi7/build.xml
+++ b/JEE6/MinimalWebApplicationCdi7/build.xml
@@ -1,4 +1,4 @@
-<project name="JEE6-WebApp Minimal CDI" default="package">
+<project name="JEE6-WebApp Minimal CDI für JEE7" default="package">
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
 
