* Wirklich sauberes ant clean eingeführt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@314 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -59,7 +59,11 @@
 	</target>
 
 	<target name="clean" depends="-version">
-		<delete file="${plugin}" />
+		<delete>
+			<fileset dir=".">
+				<include name="${plugin-name}*.jar"/>
+			</fileset>
+		</delete>
 		<delete dir="${bin-path}" />
 	</target>
 
