--- a/JEE6/de.itemis.jee6.util/pom.xml
+++ b/JEE6/de.itemis.jee6.util/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>de.itemis.jee6</groupId>
 	<artifactId>de.itemis.jee6.utils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.2</version>
+	<version>1.1.2-SNAPSHOT</version>
 	<name>jee6-utils</name>
 	<build>
 		<sourceDirectory>${basedir}/src</sourceDirectory>
