* change encoding to utf-8
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@321 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/pom.xml
+++ b/JEE6/de.itemis.jee6.util/pom.xml
@@ -6,6 +6,11 @@
 	<packaging>jar</packaging>
 	<version>1.1.2-SNAPSHOT</version>
 	<name>jee6-utils</name>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<build>
 		<sourceDirectory>${basedir}/src</sourceDirectory>
 		<testSourceDirectory>${basedir}/test/</testSourceDirectory>
