* Refactoring wie es Maven mag.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@322 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -4,8 +4,9 @@
 
 	<property name="jar"           value="jee6-utils.jar"/>
 	<property name="bin-path"      value="./bin"/>
-	<property name="src-path"      value="./src"/>
-	<property name="tst-path"      value="./test"/>
+	<property name="taget-path"    value="./target"/>
+	<property name="src-path"      value="./src/main/java"/>
+	<property name="tst-path"      value="./src/test/java"/>
 	<property name="lib-path"      value="./lib"/>
 	<property name="doc-path"      value="../api"/>
 
@@ -61,6 +62,7 @@
 
 	<target name="clean">
 		<delete dir="${bin-path}" />
+		<delete dir="${target-path}" />
 		<delete dir="${instr-path}" />
 		<delete dir="${coverage-path}" />
 		<delete dir="${doc-path}"/>
