--- a/JEE6/de.itemis.jee6.util/pom.xml
+++ b/JEE6/de.itemis.jee6.util/pom.xml
@@ -12,11 +12,9 @@
 	</properties>
 
 	<build>
-		<sourceDirectory>${basedir}/src</sourceDirectory>
-		<testSourceDirectory>${basedir}/test/</testSourceDirectory>
 		<resources>
 			<resource>
-				<directory>${project.basedir}/src/</directory>
+				<directory>${project.basedir}/src/main/java</directory>
 				<includes>
 					<include>**/*.java</include>
 				</includes>
@@ -24,13 +22,13 @@
 		</resources>
 		<testResources>
 			<testResource>
-				<directory>${project.basedir}/test</directory>
+				<directory>${project.basedir}/src/test/java</directory>
+				<includes>
+					<include>**/*.properties</include>
+				</includes>
 				<excludes>
 					<exclude>**/*.java</exclude>
 				</excludes>
-			</testResource>
-			<testResource>
-				<directory>${project.basedir}/test</directory>
 			</testResource>
 		</testResources>
 		<plugins>
@@ -61,6 +59,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/ProxyTest.java</exclude>
+						<exclude>**/GreeceImageTest.java</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
