* XHTML-Beautifier sind nervig ;-)
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@326 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -4,6 +4,7 @@
 	<property file="${basedir}/environment.properties"/>
 
 	<property name="bin-path"     value="./bin"/>
+	<property name="lib-path"     value="./lib"/>
 	<property name="src-path"     value="./src"/>
 	<property name="src-gen-path" value="./src-gen"/>
 	<property name="manifest"     value="META-INF/MANIFEST.MF"/>
