--- a/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/errors.properties
+++ b/JEE6/de.itemis.jee6.dbauth/src/de/itemis/jee6/dbauth/errors.properties
@@ -1,5 +1,5 @@
 #Automatically extended
-#Wed Jun 26 15:41:59 CEST 2013
+#Mon Jul 29 12:02:21 CEST 2013
 code403.message=Access to the requested resource has been denied\!
 code403.title=Four oh three\!
 code404.message=The requested document was not found\!
@@ -7,4 +7,5 @@ code404.title=Four oh four\!
 error.title=General application fault\!
 not-found.title=Resource not found\!
 user.authinfo.not-empty=Data of AuthInfo is not empty\!
+user.siteauthinfo.not-empty=Data of SiteAuthInfo is not empty\!
 user.siteinfo.not-empty=Data of SiteInfo is not empty\!
