--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.itemis.jee6</groupId>
 	<artifactId>de.itemis.jee6.releng</artifactId>
-	<version>1.1.2</version>
+	<version>1.1.7</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -19,14 +19,13 @@
 
 	<!-- this is the parent POM from which all modules inherit common settings -->
 	<properties>
-		<tycho-version>0.17.0</tycho-version>
-		<tycho-extras-version>0.17.0</tycho-extras-version>
-		<antrun-version>1.6</antrun-version>
+		<tycho-version>0.19.0</tycho-version>
+		<tycho-extras-version>0.19.0</tycho-extras-version>
+		<antrun-version>1.7</antrun-version>
 		<platform-version-name>juno</platform-version-name>
 		<p2.target.repository>http://download.eclipse.org/releases/juno</p2.target.repository>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jee6-version>1.1.2</jee6-version>
-		<jee6config-version>1.1.2</jee6config-version>
+		<jee6.utils.version>1.1.7</jee6.utils.version>
 	</properties>
 	<build>
 		<!--resources> <resource> <directory> [your folder here] </directory> </resource> 
@@ -82,25 +81,6 @@
 					</configuration>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>1.3</version>
-					<executions>
-						<execution>
-							<id>add-source</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>add-source</goal>
-							</goals>
-							<configuration>
-								<sources>
-									<source>${project.build.directory}/xtend-gen</source>
-								</sources>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>2.4.1</version>
@@ -147,7 +127,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
-					<version>1.3</version>
+					<version>${antrun-version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -165,11 +145,6 @@
 						<arguments>-Prelease</arguments>
 					</configuration>
 				</plugin>
-				<plugin>
-					<groupId>org.eclipse.dash.maven</groupId>
-					<artifactId>eclipse-signing-maven-plugin</artifactId>
-					<version>1.0.2</version>
-				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
@@ -186,14 +161,6 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
-		<pluginRepository>
-			<id>eclipse-xtend</id>
-			<url>http://build.eclipse.org/common/xtend/maven</url>
-		</pluginRepository>
-<!-- 		<pluginRepository> -->
-<!-- 			<id>eclipse-orbit</id> -->
-<!-- 			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20130517111416/repository/</url> -->
-<!-- 		</pluginRepository> -->
 	</pluginRepositories>
 
 	<profiles>
@@ -203,6 +170,11 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<repositories>
+				<repository>
+					<id>jee6-target</id>
+					<layout>p2</layout>
+					<url>${p2.target.repository}</url>
+				</repository>
 				<repository>
 					<id>oaw-tools</id>
 					<layout>p2</layout>
