--- a/JEE6/de.itemis.jee6.ui/build.properties
+++ b/JEE6/de.itemis.jee6.ui/build.properties
@@ -1,5 +1,5 @@
 source.. = src/,\
           src-gen/
-bin.includes = META-INF/,icons/,\
+bin.includes = META-INF/,icons/,resources/,\
                .,\
                plugin.xml
